--- a/pom.xml
+++ b/pom.xml
@@ -32,10 +32,25 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.3</version>
         <configuration>
-          <source/>
-          <target/>
+          <source>1.7</source>
+          <target>1.7</target>
         </configuration>
       </plugin>
+	  <plugin>  
+	   <groupId>org.codehaus.mojo</groupId>  
+	   <artifactId>exec-maven-plugin</artifactId>  
+	   <version>1.1.1</version>  
+			<executions>  
+				<execution>  
+					<goals>  
+						<goal>java</goal>  
+					</goals> 
+				</execution>  
+			</executions>
+			<configuration>  
+				<mainClass>com.maxclay.Main</mainClass>  
+			</configuration> 
+		</plugin>
     </plugins>
   </build>
 </project>
